ppo running in vanilla antmaze

--- a/experiments/antmaze/config/models/transition_gaussian.yaml
+++ b/experiments/antmaze/config/models/transition_gaussian.yaml
@@ -8,5 +8,6 @@ dist:
   type: diag_gaussian
   output_dim: ${model.latent_dim}
   input_dim: ${model.latent_dim}
+  activation: relu
   min_std: 0.001
   max_std: 100
