--- a/experiments/antmaze/egocentric/online_planner_markov_splitcnn.yaml
+++ b/experiments/antmaze/egocentric/online_planner_markov_splitcnn.yaml
@@ -2,7 +2,7 @@ experiment_cwd: exp_results/antmaze/egocentric/absmdps
 experiment_name: test
 exp_id: test
 fabric:
-  accelerator: gpu
+  accelerator: cpu
   devices: 1
   strategy: auto
 
@@ -23,13 +23,14 @@ experiment:
   outdir: planning_ddqn
   explore_ground: false
   prefill: 512
+  gradient_steps: 1
 
 world_model:
   ckpt: none
   data_path: none
   name: null
   reward_scale: ${planner.env.reward_scale}
-  sample_transition: true
+  sample_transition: false
   model_success: false
   gamma: ${planner.env.gamma}
   fixed_modules: []
@@ -76,7 +77,6 @@ world_model:
           - 512
           activation: mish
           outact: none
-
     decoder:
       type: mlp
       input_dim: ${eval:${model.latent_dim}*2}
@@ -150,22 +150,24 @@ world_model:
     termination:
       type: mlp
       input_dim: ${model.latent_dim}
-      output_dim: 2
+      output_dim: 1
       hidden_dims:
       - 256
       - 256
       activation: mish
     goal_class: 
-      type: mlp
+      type: 'mlp'
       hidden_dims: [256, 256]
       activation: mish
+      normalize: true
       output_dim: 1
+      input_dim: ${model.latent_dim}
       reward_warmup_steps: 15000
     
   optimizer:
     type: adam
     params:
-      lr: 5e-4
+      lr: 1e-4
   scheduler:
     type: 'linear_scheduler'
     params:
@@ -188,7 +190,7 @@ world_model:
 
   data:
     buffer_size: 100000
-    batch_size: 16
+    batch_size: 1024
 
 planner:
   train_every: ${experiment.train_every}
@@ -202,7 +204,7 @@ planner:
     goal: 0
     abstract_goal_tol: 0.1
     envname: 'ant_maze_xl'
-    n_envs: 1
+    n_envs: 2
 
   agent:
     load: null
@@ -232,3 +234,40 @@ planner:
     hidden_dims: [256, 256]
     activation: mish
     output_dim: 1024
+
+  ppo_func:
+    type: 'mlp'
+    n_actions: 8
+    hidden_dims: [256, 256]
+    activation: mish
+    normalize: false
+    output_dim: 1024
+
+
+  dist_ac:
+    nbins: 255
+    bmin: -20
+    bmax: 20
+    gamma: ${planner.env.gamma}
+    lambd: 0.95
+    actor_lr: 3e-5
+    critic_lr: 3e-5
+    slow_ema_decay: 0.98
+    normalizer_ema_decay: 0.99
+    entropy_const: 3e-4
+    reg_const: 1.
+    n_actions: ${world_model.model.n_options}
+    actor:
+        type: 'mlp'
+        output_dim: ${world_model.model.n_options}
+        input_dim: ${world_model.model.latent_dim}
+        hidden_dims: [256, 256]
+        normalize: True
+        activation: 'mish'
+    critic:
+        type: 'mlp'
+        output_dim: ${planner.dist_ac.nbins}
+        input_dim: ${world_model.model.latent_dim}
+        hidden_dims: [256, 256]
+        normalize: True
+        activation: 'mish'
