--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 tqdm==4.64
-torch==1.13
-tensorboard==2.10
-torchvision==0.14
+torch==2.1
+tensorboard==2.15
+torchvision==0.16
 pygame==2.1
-numpy==1.23
+numpy==1.24
 matplotlib==3.6
-pytorch-lightning==1.5
+lightning==2.0
 scikit-learn==1.1
-gym==0.26
-optuna==3.1
+gym==0.22
+optuna==3.2
 omegaconf==2.3
+mujoco-py==2.1.2.14
+cython<3
+pfrl==0.3
+d4rl==1.1
+pandas==1.5
